CNCS Dev 12/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Address__c</fullName>
        <label>Alternate Address</label>
        <picklist>
            <picklistValues>
                <fullName>Keep Your Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enter New Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attachment_URL_del__c</fullName>
        <defaultValue>&quot;https://cns--devsb12.cs32.my.salesforce.com/a07r00000008ndJ&quot;</defaultValue>
        <inlineHelpText>Go To attachments page</inlineHelpText>
        <label>Attachment URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CCR_Active_Until__c</fullName>
        <label>CCR Active Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CNCS_Type__c</fullName>
        <label>CNCS Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consultants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City1__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_4__c</fullName>
        <label>DUNS+4</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DUNS_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DUNS Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daytime_Phone__c</fullName>
        <label>Daytime Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>AAE Waiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAE Waiver Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Representative Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission Executive Order&quot;</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <label>Draft</label>
        <picklist>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>False</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Evening_Phone__c</fullName>
        <label>Evening Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>External_Type__c</fullName>
        <label>External Type</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - State Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion from VISTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion from TRUST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion from GARP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax1__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Legacy Org ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Others_Please_Specify__c</fullName>
        <label>If Others,Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_1__c</fullName>
        <label>Mailing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_2__c</fullName>
        <label>Mailing Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NCCC_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_d_b_a__c</fullName>
        <label>Name (d.b.a)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O__c</fullName>
        <label>Organization Characteristics</label>
        <picklist>
            <picklistValues>
                <fullName>Governor&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission/Alt Admin Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Affiliate of National Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statewide Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Action Agency/Prog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Government Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribal Organization (NGO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non-Profit (Multi-State)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Native American Org</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational/Technical College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Historically Black College/Univ. (HBCU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic-Serving College/Univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tribally controlled college/Univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Agency on Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chamber of Commerce/Bus. Assn.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Civic Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Management Org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law Enforcement Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-Inc. Senior Corps Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-based organization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>For Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education Organization - State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ Internal Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - County</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Municipal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government - Township</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Education Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U.S. Territory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Designation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Since_Year__c</fullName>
        <inlineHelpText>Year of organization account was created</inlineHelpText>
        <label>Since Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Size_of_the_Organization__c</fullName>
        <label>Size of the Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supertype__c</fullName>
        <label>Supertype</label>
        <picklist>
            <picklistValues>
                <fullName>CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VISTA_TIN__c</fullName>
        <label>VISTA TIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_41__c</fullName>
        <label>Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Document_Type__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>organization</fullName>
        <active>true</active>
        <label>organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <recordTypes>
        <fullName>test_1</fullName>
        <active>true</active>
        <label>test 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_Number_Cannot_Be_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Draft__c , &apos;False&apos;),ISBLANK(Phone))</errorConditionFormula>
        <errorMessage>please fill the phone number</errorMessage>
    </validationRules>
</CustomObject>